--- a/views/games.ejs
+++ b/views/games.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/navigation') %>
-    <h1 class="page-h1">
-        Welcome Home!
-    </h1>
+<h1 class="page-h1">
+    Coming Soon: Games
+</h1>
 <%- include('partials/footer') %>
