--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="styles/register.css">
     <link rel="stylesheet" href="styles/main.css">
     <title>My Critique - Create Account or Log In!</title>
 </head>
@@ -19,7 +19,6 @@
                 </div>
     
                 <div class="form-content">
-                    <%- include('partials/login-flash') %>
                     <div class="validation-feedback">
                         <p class="validation-feedback-error"></p>
                     </div>
@@ -303,7 +302,7 @@
         <div class="animated-bg"></div>
     </div>
 
-    <script src="scripts/login_util.js"></script>
+    <script src="scripts/register_util.js"></script>
     <script src="scripts/validation.js"></script>
 
 </body>
