--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,6 +2,7 @@
 /* Root elements */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;800&display=swap');
 
+
 .active-link {
     border-bottom: 4px solid var(--color-secondary)
 }
@@ -30,28 +31,37 @@
 
 :root {
     font-size: 16px;
-    --color-primary: #455073;
-    --color-primary-light: #5e688b;
-    --color-secondary: #efc9af;
+    --color-primary: #9c9a9a;
+    --color-primary-light: #aaaaaa;
+    --color-secondary: #f68104;
     --color-secondary-light: #e73a6b;
     --color-grey: #E8E8E8;
     --color-grey-dark: #cac8c8;
+    --color-validate: rgb(0, 255, 30);
     --color-accent: #000000;   
     --gradient: linear-gradient(45deg,var(--color-primary), var(--color-secondary));
 }
 
 body, html {
     overflow-x: hidden;
-    }
+}
 
 body {
-    background-color: white;
+    height: 100vh;
+}
+
+#page-content {
     display: flex;
     align-items: center;
-    flex-direction: column;
-    height: 100vh;
+    flex-direction: column; 
+    height: auto;
     width: 100vw;
-    position: relative;
+    position: relative; 
+    overflow-x: hidden;
+}
+
+#login {
+    height: 100vh;
 }
 
 /* Styles and animates navigation at top of page */
@@ -82,7 +92,7 @@ body {
 }
 
 #site-search {
-    width : 100%;
+    width : 97vw;
     height: 100%;
     border-radius: 3em;
     padding: 1em;
@@ -143,31 +153,23 @@ body {
     gap: .5em;
 }
 
-.bar-btn {
+li button {
     height: 100%;
-    width: auto;
+    width: 100px;
+    border: none;
     background-color: var(--color-secondary);
-    padding: 0 2em;
+    color: white;
+    font-weight: bold;
     border-radius: 3em;
-    -webkit-border-radius: 3em;
+    -o-border-radius: 3em;
     -moz-border-radius: 3em;
-    display: flex;
-    align-items: center;
+    -webkit-border-radius: 3em;
     cursor: pointer;
 }
 
-.bar-btn a {
-    color: white;
-    font-weight: 800;
-    font-size: 2vw;
-    white-space: nowrap;
-    transform: scale();
+#create-acct-btn-nav {
+    background-color: var(--color-accent);
 }
-
-.btn-create-account {
-    background-color: var(--color-accent)
-}
-
 .notification-bar-icon {
     height: 100%;
     width: 45px;
@@ -241,153 +243,6 @@ border : 2px solid var(--color-primary)
     font-size: .8rem;
     color: white;
 }
-
-/* Styles user profile cover*/
-.profile-cover {
-    width: 100%; 
-    max-width: 1250px;
-    height: 500px;
-    background-color: var(--color-grey);
-    filter: drop-shadow(0px 2px 3px rgba(0,0,0, 0.3));
-    z-index: 1;
-}
-
-.profile-cover-lower {
-    background-color: var(--color-grey);
-    width: 100%;
-    max-width: 1000px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    filter: drop-shadow(0px 2px 3px rgba(0,0,0, 0.3));
-    overflow-x: scroll;
-}
-
-/* Styles lower portion of profile cover */
-.profile-buttons {
-position: absolute; 
-display: flex;
-justify-content: center;
-top: 78%;
-left: 50%;
-transform: translate(-50%,-50%);
-width: 60%;
-gap: 1em;
-}
-
-.button {
-    width: 50%;
-    padding: 1em 0em;
-    border-radius: 3em;
-    -webkit-border-radius: 3em;
-    -moz-border-radius: 3em;        
-    -o-border-radius: 3em;
-    appearance: none;
-    -webkit-appearance: none;
-    color: white;
-    font-weight: 800;
-    background-color: var(--color-secondary);
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-
-/* INCREASE MARGIN AND ADD 1FR FOR EVERY LINK IN USER PROFILE */
-.profile-links-container {
-
-}
-.profile-links {
-    list-style: none;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    gap: 1em;
-    padding: 1em;
-}
-/* INCREASE MARGIN AND ADD 1FR FOR EVERY LINK IN USER PROFILE */
-
-.profile-links a {
-    text-decoration:  none;
-}
-
-.profile-links a li{
-    color: black;
-    font-weight: 800;
-    padding: 1em;
-}
-
-/* Styles profile picture container */
-.profile-picture-container {
-    width: 200px;
-    height: 200px;
-    background-color: #cac8c8;
-    position: absolute;
-    top: 33%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    filter: drop-shadow(0px 2px 3px rgba(0,0,0, 0.3));
-}
-
-.profile-icon {
-    top: 7.5em;
-}
-
-.profile-picture-icon-container{
-    width: 45px;
-    height: 45px; 
-    background-color: var(--color-secondary);
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    position: absolute;
-    right: 0;
-    top: 9em;
-
-}
-
-/* Styles profile name */
-.fullname-profile {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    font-size: 1.4rem;
-}
-
-.username-profile {
-    position: absolute;
-    top: 65%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    font-size: 1.1rem;
-    font-weight: 400;
-}
-
-  /* HOMEPAGE */
-  .page-h1 {
-    position: absolute;
-    top: 160px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 1.3rem;
-}
-
-.home-hero {
-    
-}
- /* HOMEPAGE */
 
 /* POPUP - PROFILE */
 .popup-profile {
@@ -610,7 +465,7 @@ justify-content: space-between;
 .search-popup-heading-container {
     width: 100%;
     height: 15%;
-    background-color: var(--color-primary-light);
+    background-color: var(--color-primary);
     border-radius: .5em;
     -webkit-border-radius: .5em;
     padding: 1em;
@@ -618,7 +473,7 @@ justify-content: space-between;
 }
 
 .search-popup-heading-container h3 {
-   color: white;
+   color: var(--color-primary);
 }
 
 .slidedown {
@@ -657,47 +512,194 @@ justify-content: space-between;
 }
 /* POPUP - SEARCH */
 
+/* Styles login and create account buttons when not logged in */
 
-/* aligns profile nagivigation bar */
-@media screen and (min-width: 450px){
-    .profile-links-container {
-        margin-left: initial;
-    }
+/* GAMES PAGE*/
+.cover-image {
+width: 100%;
+height: 50vw;
+max-height: 450px;
+filter: drop-shadow(0px 3px 3px rgba(0,0,0, 0.4));
+}
+
+.cover-image img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.game-content-container {
+    width: 100%;
+    height: 350px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 1em;
+}
+
+.game-btns {
+    width: 50vw;
+    max-width: 250px;
+    border-radius: .5em;
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    -o-border-radius: .5em;
+    appearance: none;
+    padding: 1em;
+    border: none;
+    font-weight: bold;
+    font-size: 1rem;
+    color: white;
+    background-color: var(--color-secondary)
+}
+
+.rating-btn-container {
+    display: flex;
+    position: absolute;
+    top: 1em; right: 1em;
+}
+
+.rating-btns {
+    width: 8vw;
+    height: 8vw;
+    max-height: 50px;
+    max-width: 50px;
+    position: relative;
+    background-color: var(--color-grey);
+    border: none;
+    appearance: none;
+}
+
+#rate-up-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 50%;
+    fill: var(--color-grey-dark)
+}
+
+#rate-down-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 50%;
+    fill: var(--color-grey-dark);
+}
+
+#add-to-shelf-btn {
+    background-color: var(--color-primary)
+}
+
+#create-post-btn {
+    margin-left: 1em;
+}
+
+.game-logo {
+    width: 182px;
+    height: 237px;
+    position: absolute;
+    left: 50%;
+    top: -8em;
+    transform: translateX(-50%);
+    filter: drop-shadow(0px 3px 3px rgba(0,0,0, 0.3));
+}
+
+.game-logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1em;
+}
+
+.game-rating {
+    width: 75px;
+    height: 75px;
+    background-color: var(--color-validate);
+    border-radius: 50%;
+    border: 10px solid white;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -2.5em;
+}
+
+.game-rating p{
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   transform: translate(-50%,-50%);
+   font-size: 1.8em;
+   font-weight: bold;
+   color: white;
+}
+
+.game-name {
+    position: absolute;
+    height: auto;
+    width: auto;
+    left: 50%;
+    top: 10em;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-name h5 {
+    margin-top: .1em
+}
+
+.published-by {
+    margin-top: .1em;
+}
+
+.accented-text {
+color: var(--color-secondary)
+}
+
+.screenshots {
+    width: 100%;
+    height: 500px;
+    background-color: white;;
+}
+
+/* HOMEPAGE */
+.home-content {
+    width: 100%;
+    height: 500px;
+    background-color: var(--color-grey)
+}
+
+/* SEARCHPAGE */
+.search-content {
+    width: 100%;
+    background-color: white;
+    padding: 1em;
+    text-align: center;
+}
+
+.search-content div {
+    display: inline-block;
+    flex-wrap: wrap-reverse;
+    margin-bottom: 1em;
+    border-radius: 1em;
+    margin-top: 1em;
+}
+.search-content img {
+padding: 1em;
+filter: drop-shadow(0px 3px 3px rgba(0,0,0, 0.4))
 }
 
 /* Galaxy Fold */
 @media screen and (max-width: 280px){
-    /* Styles profile name */
-    .fullname-profile {
-        font-size: 1.1rem;
+    li button {
+        width: 75px;
+        font-size: .5rem;
     }
-    
-    .username-profile {
-        font-size: .8rem;
-        top: 64%;
-    }
-
-    .button {
-        font-size: .6rem;
-    }
-
-    .profile-links a li {
-        font-size: .7rem;
-    }
-
-       /* HOMEPAGE */
-  .page-h1 {
-    font-size: .9rem;
-    
-}
-/* Styles login and create account buttons when not logged in */
-.bar-btn a {
-    color: white;
-    font-weight: 800;
-    font-size: 2vw;
-    white-space: nowrap;
-    transform: scale(1.7);
-}
 }
 
 /* Landscape */
@@ -708,25 +710,10 @@ justify-content: space-between;
 }
 
 /* Tablet */
-@media screen and (min-width: 580px) and (min-height: 540px) {
+@media screen and (min-width: 810px) and (min-height: 540px) {
 
     body {
         position: relative;
-    }
-    
-    .profile-cover-lower {
-        border-bottom-left-radius: 1.5em;
-        border-bottom-right-radius: 1.5em;
-        -webkit-border-bottom-left-radius: 1.5em;
-        -moz-border-bottom-left-radius: 1.5em;
-        -o-border-bottom-left-radius: 1.5em;
-        -webkit-border-bottom-right-radius: 1.5em;
-        -moz-border-bottom-right-radius: 1.5em;
-        -o-border-bottom-right-radius: 1.5em;
-    }
-    
-    .profile-buttons {
-        width: 30%;
     }
 
     .popup-profile {
@@ -771,11 +758,34 @@ justify-content: space-between;
             right: -38em;
         }
     }
-
-    .bar-btn a {
-
+    li button {
+        width: 150px;
         font-size: 1rem;
+    }
 
+    /* GAMES PAGE */
+
+    .cover-image {
+        height: 40vw;
+    }
+
+    .game-content-container {
+        height: 180px;
+        justify-content: flex-end;
+    }
+
+    .game-logo {
+        transform: translate(10%);
+        left: 0;
+        top: -7em;
+    }
+
+    .game-name {
+        top: 0.5em;
+        transform: translateX(0);
+        left: 13.5em;
+        display: block;
+        white-space: initial;
     }
     
 }
@@ -928,58 +938,7 @@ justify-content: space-between;
         width: 10vw;
     }
 
-    /* Styles profile cover */
-    .profile-cover {
-        height: 650px;
-        border-bottom-left-radius: 3em;
-        border-bottom-right-radius: 3em;
-        -webkit-border-bottom-left-radius: 3em;
-        -moz-border-bottom-left-radius: 3em;
-        -o-border-bottom-left-radius: 3em;
-        -webkit-border-bottom-right-radius: 3em;
-        -moz-border-bottom-right-radius: 3em;
-        -o-border-bottom-right-radius: 3em;
-    }
-
-    .profile-buttons {
-        top: 88%;
-        width: 40%;
-        }
-
-    /* Styles profile picture icon */
-    .profile-picture-container {
-        width: 300px;
-        height: 300px;
-        top: 40%;
-    }
-
-    .profile-icon {
-        top: 11.2em;
-        left: 9.4em;
-    }
-
-    .profile-picture-icon-container{
-    right: 1em;
-    top: 14.5em;
-
-    }
-
-    /* Styles profile name */
-    .fullname-profile {
-        font-size: 3rem;
-        top: 71%;
-    }
-
-    .username-profile {
-        font-size: 2rem;
-        top: 78%;
-    }    
-
-        /* HOMEPAGE */
-  .page-h1 {
-    top: 130px;
-    font-size: 3rem;
-}
+    
 .popup-profile {
     right: -38em;
     left: initial;
@@ -1027,12 +986,24 @@ justify-content: space-between;
         right: -38em;
     }
 }
-
-
-/* Home Page */
-.home-hero {
-
+/* GAMES PAGE */
+.game-logo {
+    width: 264px;
+    height: 374px;
+    transform: translateX(10%);
+    left: 0;
+    top: -12em;
 }
+
+.game-content-container {
+    height: 230px;
+    min-height: 230px;
+}
+
+.game-name {
+    left: 19em;
+}
+
 }
 
 /* Desktop 4k */
@@ -1129,60 +1100,9 @@ justify-content: space-between;
     .notification p {
         font-size: 1.8rem;
     }
-
-    /* Styles profile picture icon */
-    .profile-picture-container {
-        width: 400px;
-        height: 400px;
-        top: 42%;
-    }
-    
-    .profile-icon {
-        top: 14.9em;
-        left: 12.5em;
-    }
-
-    .profile-picture-icon-container{
-        width: 90px;
-        height: 90px;
-        top: 18em
-    }
-
-    /* Styles profile cover */
-    .profile-cover {
-        max-width: 1650px;
-        height: 900px;
-    }
-
-    .profile-cover-lower {
-        max-width: 1300px;
-    }
-
-    .profile-buttons {
-        top: 92%;
-    }
-    
-    .button {
-        font-size: 1.1rem;
-    }
-
-    .profile-links a li {
-        font-size: 1.5rem;
-    }
-
-     /* Styles profile name */
-     .fullname-profile {
-        font-size: 5rem;
-        top: 73%;
-    }
-
-    .username-profile {
-        font-size: 3.5rem;
-        top: 81%;
-    }    
-    }
-
-
+    /* GAMES PAGE */
+  
+}
 
 
 
