--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -38,28 +38,10 @@ body::-webkit-scrollbar-thumb {
     background-color: transparent;
 }
 
-.animated-bg {
-    width: 100%;
-    height: 100%;
-    background-image: var(--gradient);
-    background-size: 300%;
-    animation: animated-bg 3s infinite alternate;
-}
-
-@keyframes animated-bg {
-    0% {
-        background-position: left;
-    }
-
-    100% {
-        background-position: right;
-    }
-}
-
 .background {
     width: 100%;
     height: 40vw;
-    background-image: var(--gradient);
+    background-color: var(--color-secondary);
     position: absolute;
     top: 0;
     z-index: 2;
