--- a/views/games.ejs
+++ b/views/games.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/navigation') %>
-
+<div class="home-content"></div>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="scripts/games.js"></script>
 <%- include('partials/footer') %>
