--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <title>My Critique - Create Account or Log In!</title>
 </head>
-<body>
+<body id="login">
     <div class="container">
     
         <div class="login-container">
