--- a/views/games.ejs
+++ b/views/games.ejs
@@ -1,5 +1,14 @@
 <%- include('partials/navigation') %>
-<div class="home-content"></div>
+<div class="page-container-hero">
+    <div class="heading-container">
+        <div>
+        <h1>Feeling Bored?</h1>
+        <p>Find a new game.</p>
+        </div>
+    </div>
+</div>
+
+<div class="games-hero"></div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="scripts/games.js"></script>
 <%- include('partials/footer') %>
