--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/navigation') %>
-<div class="home-content"></div>
+<div class="home-content">
+    
+</div>
 <%- include('partials/footer') %>
