--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/navigation') %>
-<h1>PROFILE</h1>
+<div class="home-content"></div>
+
+</div>
 <%- include('partials/footer') %>
